--- a/appinfo.json
+++ b/appinfo.json
@@ -1,15 +1,12 @@
 {
   "uuid": "3a0c3e5c-9fe2-4a43-b92b-b8e16dbf0ea9",
   "shortName": "GoSy Run",
-  "longName": "GoSy Run Trainer",
+  "longName": "GoSy Run",
   "companyName": "Gotling System AB",
-  "versionCode": 1,
-  "versionLabel": "1.0.0",
+  "versionCode": 2,
+  "versionLabel": "1.1.0",
   "watchapp": {
     "watchface": false
-  },
-  "appKeys": {
-    "dummy": 0
   },
   "resources": {
     "media": [
