--- a/appinfo.json
+++ b/appinfo.json
@@ -18,6 +18,21 @@
       },
       {
         "type": "png",
+        "name": "IMAGE_ACTION_ICON_PLUS",
+        "file": "images/action_icon_plus.png"
+      },
+      {
+        "type": "png",
+        "name": "IMAGE_ACTION_ICON_MINUS",
+        "file": "images/action_icon_minus.png"
+      },
+      {
+        "type": "png",
+        "name": "IMAGE_ACTION_ICON_CONFIRM",
+        "file": "images/action_icon_confirm.png"
+      },
+      {
+        "type": "png",
         "name": "IMAGE_CHECKMARK",
         "file": "images/checkmark_round.png"
       },
