--- a/appinfo.json
+++ b/appinfo.json
@@ -4,7 +4,7 @@
   "longName": "GoSy Run",
   "companyName": "Gotling System AB",
   "versionCode": 6,
-  "versionLabel": "1.5.0b2",
+  "versionLabel": "1.5.0",
   "watchapp": {
     "watchface": false
   },
