--- a/appinfo.json
+++ b/appinfo.json
@@ -3,8 +3,8 @@
   "shortName": "GoSy Run",
   "longName": "GoSy Run",
   "companyName": "Gotling System AB",
-  "versionCode": 6,
-  "versionLabel": "1.5.0",
+  "versionCode": 7,
+  "versionLabel": "1.6",
   "watchapp": {
     "watchface": false
   },
@@ -72,5 +72,10 @@
         "file": "images/stretch/calf.png"
       }
     ]
-  }
+  },
+  "targetPlatforms": [
+    "aplite",
+    "basalt"
+  ],
+  "sdkVersion": "3"
 }
